# quoted

./: .editorconfig  LICENSE  README.md  pyproject.toml  setup.py
quoted/: __init__.py  quoted.py
quoted/scrapy/extensions/: storage.py
quoted/scrapy/spiders/: __init__.py  brainyquote.py  goodreads.py  toscrape.py
